[singleton] - clean code